Fri Jan 24 14:16:08 2003  George Lebl <jirka@5z.com>

	* lib/number_theory/modulus.gel: add implementation of EulerPhi

	* lib/number_theory/primes.gel: some parameter checking

Thu Jan 09 15:38:45 2003  George Lebl <jirka@5z.com>

	* src/geloutput.[ch], src/calc.c: fix help output a bit to
	  obey terminal size

	* lib/combinatorics/factorial,gel: add Subfactorial

	* lib/combinatorics/misc.gel: whack some unimplemented functions

	* src/funclib.c: add GoldenRatio

	* src/gnome-genius.c: actually use the font we set

Thu Jan 09 11:14:19 2003  George Lebl <jirka@5z.com>

	* src/calc.[ch], src/funclib.c, src/genius.c, src/gnome-genius.c,
	  src/inter.c, src/lexer.l, src/mpwrap.[ch], src/testplugin.c:
	  Some internal cleanup, prefix some functions with gel_, add
	  a general printout infos function.  Whack the help entry in the
	  menu since there is no help, and add a warranty item that runs
	  the warranty function.  Also fix the hiding of the plugins menu.

Thu Jan 09 10:40:42 2003  George Lebl <jirka@5z.com>

	* src/plugread.c, src/plugin.h, src/gnome-genius.c,
	  src/test.plugin.in:  Add a Hide= entry in the plugin description
	  and if true don't show the plugin in the gui.  Also if the
	  plugin menu is empty, then hide the whole toplevel menu.

Wed Jan 08 13:37:09 2003  George Lebl <jirka@5z.com>

	* src/Makefile.am, src/gnome-genius.c: move the helper program
	  to libexec

	* src/plugin.[ch], src/plug_api.h, src/Makefile.am,
	  src/gnome-genius.c, src/calc.c, src/plugread.[ch],
	  src/testplugin.c, src/genius.c: attempt to make the plugin
	  stuff a bit more usable and implement the save state and
	  restore state

	* src/calc.c, src/inter.c: use nicer colors on gui version

	* src/gnome-genius.c: fix saving of preferences, port the
	  error/info dialog to new gtk

	* src/eval.c, src/mpwrap.c, src/matrixw.c, src/lexer.l,
	  src/parse.y: fix warnings

	* configure.in: properly enable warnings

Tue Jan 07 18:05:08 2003  George Lebl <jirka@5z.com>
