@@ -1,3 +1,5 @@
+*	If mod fails the result is wrong (e.g. 0.3 mod 5)
+
 *	Check variable substitution of references, that could refer
 	to freed data I think
 
