@@ -84,16 +84,6 @@ protect("IsPrime");
 SetHelp("IsPrimeLoopMax","parameters", "Maximum number which IsPrime uses in trial division");
 parameter IsPrimeLoopMax = 5000;           # IsPrime configuration variable
 
-SetHelp("NextPrime","number_theory","Returns the least prime greater than n (if n is positive)");
-function NextPrime(n) =
- (
-    if not IsValue(n) or not IsInteger(n) then
-	(error("NextPrime: argument not an integer");bailout);
-  do n=n+1 while not(IsPrime(n));
-  return n
- )
-protect("NextPrime");
-
 #####################################
 #### (Strong) Pseudoprime tests #####
 #####################################
