@@ -476,3 +476,15 @@ function w(h) = (function a(x) = h+x ; a) ; w(7) call (3)	10
 function w(h) = (function a(x) = h+x ; a(7)) ; w(7)		14
 3 mod 2								1
 [3,2] mod 2							[1,0]
+279/361 mod 676							115
+1/11 mod 3							2
+234234 mod -8							(234234 mod -8)
+-1 mod 4							3
+10^-1 mod 23							7
+1/10 mod 23							7
+IsPrime(7)							1
+IsPrime(8)							0
+IsPrimeProbability(7,5)						2
+IsPrimeProbability(8,5)						0
+NextPrime(23)							29
+NextPrime(28)							29
